<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raise Your Hand</string>
    <string name="action_settings">Settings</string>
    <string name="title_lecture_list">Lectures</string>
    <string name="title_view_lecture">Information</string>
    <string name="title_in_progress">In Progress</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_file_dialog">Choose File from</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_view_shared">Shared Note</string>
    <string name="title_ask">Ask Your Question</string>
    <string name="lecture_list_search">Search Lectures</string>
    <string name="share_button">Upload a note</string>
    <string name="instructor_lecture_quiz_button">Quiz</string>
    <string name="instructor_lecture_list_search">Search Lecture</string>
    <string name="instructor_info_search">Search</string>
    <string name="instructor_info_button">Start Lecture</string>
    <string name="instructor_lecture_attendance_button">Attendance</string>
    <string name="instructor_lecture_attendance_timer_set">Set Timer</string>
    <string name="instructor_lecture_attendance_timer_start">Start Timer</string>
    <string name="instructor_lecture_attendance_timer_end">End Timer</string>
    <string name="instructor_lecture_attendance_minute">Min</string>
    <string name="instructor_lecture_attendance_second">Sec</string>
    <string name="instructor_lecture_attendance_time">00:00</string>
    <string name="instructor_view_lecture_button">Start Lecture</string>
    <string name="instructor_view_lecture_search">Search Enrolled Students</string>
    <string name="instructor_attendance_search">Search Students</string>
    <string name="instructor_quiz_upload_button">Upload Quiz Screenshot</string>
    <string name="instructor_quiz_imageView">Quiz Question</string>
    <string name="instructor_quiz_time_set">00:00</string>
    <string name="instructor_quiz_set_time_button">Set Time</string>
    <string name="instructor_quiz_begin_button">Begin Quiz</string>
    <string name="instructor_quiz_ongoing_imageView"></string>
    <string name="instructor_quiz_end">End Quiz</string>
    <string name="instructor_dialog_end_quiz">End Quiz?</string>
    <string name="instructor_dialog_end_lecture">End Lecture?</string>
    <string name="instructor_dialog_ignore">Ignore Student?</string>
    <string name="instructor_dialog_delete_note">Delete Note?</string>
    <string name="instructor_dialog_share_item">Share with Class?</string>
    <string name="instructor_dialog_share_item_imageView">Share with Class</string>
    <string name="instructor_dialog_quiz_result_imageView">Quiz Result</string>
    <string name="instructor_dialog_quiz_result">Quiz Result</string>
    <string name="instructor_dialog_quiz_result_dismiss">Dismiss</string>
    <string name="instructor_dialog_receive_question">Student #:</string>
    <string name="instructor_dialog_revoke">Revoke Student Privileges</string>
    <string name="instructor_receive_question_imageView">Receiving Question</string>
    <string name="dialog_item_share_imageView">Shared Note</string>
    <string name="student_lecture_list_search">Search Lectures</string>
    <string name="student_info_button">Attend Lecture</string>
    <string name="student_lecture_ask_button">Question</string>
    <string name="student_lecture_download_button">Download All</string>
    <string name="student_quiz_button">Submit Answer</string>
    <string name="student_quiz_imageView">Quiz Answer</string>
    <string name="student_dialog_quiz_result">Quiz Result</string>
    <string name="student_dialog_quiz_result_imageView">Quiz Result</string>
    <string name="student_ask_record">Record Question</string>
    <string name="student_ask_type">Type Question</string>
    <string name="student_dialog_end_lecture">Leave Lecture?</string>
    <string name="student_dialog_submit_quiz">Submit Quiz?</string>
    <string name="student_dialog_share_item">Share with Class?</string>
    <string name="student_dialog_share_item_preview">Note</string>
    <string name="student_view_lecture_instructor">Instructor</string>
    <string name="student_view_lecture_date">Dates</string>
    <string name="student_view_lecture_time">Time</string>
    <string name="student_view_lecture_building">Building</string>
    <string name="student_view_lecture_room">Room</string>
    <string name="student_view_lecture_button">Attend Lecture</string>
    <string name="student_info_textview_instructor">Instructor</string>
    <string name="student_info_textview_instructor_b">A</string>
    <string name="student_info_textview_date">Dates</string>
    <string name="student_info_textview_date_b">B</string>
    <string name="student_info_textview_time">Time</string>
    <string name="student_info_textview_time_b">C</string>
    <string name="student_info_textview_building">Building</string>
    <string name="student_info_textview_building_b">D</string>
    <string name="student_info_textview_room">Room</string>
    <string name="student_info_textview_room_b">E</string>
    <string name="student_dialog_share_item_imageView">Share Preview</string>
    <string name="share_file_select">Select</string>
    <string name="share_file_cancel">Cancel</string>
    <string name="set_timer">Set</string>
    <string name="cancel_timer">Cancel</string>
    <string name="title_instructor_shared">Instructor Shared</string>
    <string name="title_student_shared">Student Shared</string>
    <string name="title_question_and_answer">Q/A</string>
    <string name="title_quiz_question">Question</string>
    <string name="title_quiz_answer">Answer</string>
    <string name="action_back">Back</string>
    <string name="action_mic">Mic</string>
    <string name="action_signout">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="builtin">Built-in</string>
    <string name="set">Set</string>
    <string name="instructor_lecture_add_notes_button">Add Notes Screenshot</string>
    <string name="student_ask_end_question">End Question</string>
    <string name="title_activity_student_share_preview">Preview</string>
    <string name="title_activity_count_down">Attendance</string>

</resources>