<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <!-- P39, 40 -->

    <TextView
        android:id="@+id/instructor_quiz_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/instructor_dialog_quiz_result"
        android:textStyle="bold" >
    </TextView>

    <ImageView
        android:id="@+id/instrucotr_quiz_result_imageView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/instrucotr_quiz_result_button"
        android:layout_below="@+id/instructor_quiz_result_textview"
        android:contentDescription="@string/instructor_dialog_quiz_result_imageView"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/instrucotr_quiz_result_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#f0f0f0"
        android:text="@string/instructor_dialog_quiz_result_dismiss" />

</RelativeLayout>