<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <!-- P49, 50 -->

    <ImageView
        android:id="@+id/instructor_share_item_imageview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/instructor_share_button_linearlayout"
        android:layout_below="@+id/instructor_share_item_textview"
        android:contentDescription="@string/instructor_dialog_share_item_imageView"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/instructor_share_button_linearlayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/instructor_share_item_btn_yes"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#003366"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/instructor_share_item_btn_no"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#003366"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/instructor_share_item_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/instructor_dialog_share_item"
        android:textStyle="bold" />

</RelativeLayout>