<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CountDown" >

    <SearchView
        android:id="@+id/instructor_attendance_timer_search"
        android:name="com.raiseyourhand.fragment.RosterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructor_attendance_search" >
    </SearchView>
    <ListView
        android:id="@+id/instructor_attendance_student_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:id="@+id/instructor_attendance_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/instructor_lecture_attendance_time" />
    
    <Button
        android:id="@+id/instructor_attendance_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructor_lecture_attendance_timer_start" />

</LinearLayout>