<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".student.AskActivity" >

    <!-- P76 -->

    <ImageButton
        android:id="@+id/student_ask_record_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/student_ask_record"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" >
    </ImageButton>

    <TextView
        android:id="@+id/student_ask_type_question_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_ask_type" >
    </TextView>

    <EditText
        android:id="@+id/student_ask_type_question"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="text"
        android:scaleType="center" >
    </EditText>

    <Button
        android:id="@+id/student_ask_end_question_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_ask_end_question" />

</LinearLayout>