<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <!-- P55, 56 Are we missing a delete button here or assume long click is marked for deletion -->

    <TextView
        android:id="@+id/instructor_delete_note_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/instructor_dialog_delete_note"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/instructor_delete_note_btn_yes"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#003366"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/instructor_delete_note_btn_no"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#003366"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>