<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <!-- P31 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/instructor_set_mic_bluetooth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bluetooth"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructor_set_mic_builtin_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/builtin"
            android:textIsSelectable="true"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/instructor_set_mic_btn"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#003366"
        android:clickable="true"
        android:text="@string/set"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>