<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- P46, 47 -->

    <Button
            android:id="@+id/instructor_lecture_add_notes_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:layout_alignParentTop="true"
            android:text="@string/instructor_lecture_add_notes_button"/>

    <ListView
        android:id="@+id/instructor_lecture_listview_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructor_lecture_add_notes_button"
        android:cacheColorHint="#f0f0f0" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/instructor_lecture_attendance_button_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:text="@string/instructor_lecture_attendance_button" />

        <Button
            android:id="@+id/instructor_lecture_quiz_button_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:text="@string/instructor_lecture_quiz_button" />
    </LinearLayout>

</RelativeLayout>